--- a/.github/workflows/kotlin.yml
+++ b/.github/workflows/kotlin.yml
@@ -95,7 +95,7 @@ jobs :
   ios-tests :
     name : iOS Tests
     runs-on : macos-latest
-    timeout-minutes : 20
+    timeout-minutes : 30
     steps :
       - uses : actions/checkout@v3
       - uses : gradle/wrapper-validation-action@v1
@@ -135,6 +135,56 @@ jobs :
         if : always() # always run even if the previous step fails
         with :
           report_paths : '**/build/test-results/test/TEST-*.xml'
+
+  performance-tests :
+    name : Performance tests
+    runs-on : macos-latest
+    timeout-minutes : 30
+    strategy :
+      # Allow tests to continue on other devices if they fail on one device.
+      fail-fast : false
+      matrix :
+        api-level :
+          - 29
+      # Unclear that older versions actually honor command to disable animation.
+      # Newer versions are reputed to be too slow: https://github.com/ReactiveCircus/android-emulator-runner/issues/222
+    steps :
+      - uses : actions/checkout@v3
+      - name : set up JDK 11
+        uses : actions/setup-java@v3
+        with :
+          distribution : 'zulu'
+          java-version : 11
+
+      ## Build before running tests, using cache.
+      - uses : burrunan/gradle-cache-action@v1
+        name : Build instrumented tests
+        with :
+          gradle-dependencies-cache-key : |
+            gradle/libs.versions.toml
+          arguments : |
+            :benchmarks:performance-poetry:complex-poetry:assembleDebugAndroidTest --no-daemon --stacktrace
+          concurrent : true
+          gradle-build-scan-report : false
+          gradle-distribution-sha-256-sum-warning : false
+
+      ## Actual task
+      - name : Instrumentation Tests
+        uses : reactivecircus/android-emulator-runner@v2
+        with :
+          # @ychescale9 suspects Galaxy Nexus is the fastest one
+          profile : Galaxy Nexus
+          api-level : ${{ matrix.api-level }}
+          arch : x86_64
+          # Skip the benchmarks as this is running on emulators
+          script : ./gradlew :benchmarks:performance-poetry:complex-poetry:connectedCheck --no-daemon --stacktrace --continue
+
+      - name : Upload results
+        if : ${{ always() }}
+        uses : actions/upload-artifact@v3
+        with :
+          name : instrumentation-test-results-${{ matrix.api-level }}
+          path : ./**/build/reports/androidTests/connected/**
 
   instrumentation-tests :
     name : Instrumentation tests
@@ -177,7 +227,7 @@ jobs :
           api-level : ${{ matrix.api-level }}
           arch : x86_64
           # Skip the benchmarks as this is running on emulators
-          script : ./gradlew connectedCheck -x :benchmarks:dungeon-benchmark:connectedCheck -x :benchmarks:performance-poetry:complex-benchmark:connectedCheck --no-daemon --stacktrace
+          script : ./gradlew connectedCheck -x :benchmarks:dungeon-benchmark:connectedCheck -x :benchmarks:performance-poetry:complex-benchmark:connectedCheck -x :benchmarks:performance-poetry:complex-poetry:connectedCheck --no-daemon --stacktrace
 
       - name : Upload results
         if : ${{ always() }}
