--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,8 +9,8 @@ targetSdk = "30"
 androidx-activity = "1.3.0"
 androidx-appcompat = "1.3.1"
 androidx-benchmark = "1.1.0-rc03"
-androidx-compose = "1.1.0-rc01"
-androidx-compose-compiler = "1.1.0-rc02"
+androidx-compose = "1.1.0"
+androidx-compose-compiler = "1.1.0"
 androidx-constraintlayout = "2.1.2"
 androidx-core = "1.6.0"
 androidx-fragment = "1.3.6"
@@ -49,8 +49,8 @@ kotest = "5.1.0"
 kotlin = "1.6.10"
 
 kotlinx-binary-compatibility = "0.6.0"
-kotlinx-coroutines = "1.5.1"
-# The 1.5.1 test artifact is jvm-only. The commonTest module should use 1.6.1.
+kotlinx-coroutines = "1.5.2"
+# The 1.5.2 test artifact is jvm-only. The commonTest module should use 1.6.1.
 kotlinx-coroutines-test-common = "1.6.1"
 kotlinx-serialization-json = "1.3.2"
 kotlinx-benchmark = "0.4.2"
@@ -64,6 +64,9 @@ mockito-core = "3.3.3"
 mockito-kotlin = "3.2.0"
 
 mockk = "1.11.0"
+
+molecule = "0.3.0-SNAPSHOT"
+
 robolectric = "4.6.1"
 
 rxjava2-android = "2.1.1"
@@ -100,7 +103,11 @@ kotlinx-benchmark = { id = "org.jetbrains.kotlinx.benchmark", version.ref = "kot
 ktlint = { id = "org.jlleitschuh.gradle.ktlint", version.ref = "ktlint" }
 mavenPublish = { id = "com.vanniktech.maven.publish", version.ref = "vanniktech-publish" }
 
+molecule = { id = "app.cash.molecule", version.ref = "molecule"}
+
 [libraries]
+
+molecule-gradle-plugin = { module = "app.cash.molecule:molecule-gradle-plugin", version.ref = "molecule"}
 
 android-gradle-plugin = { module = "com.android.tools.build:gradle", version.ref = "androidTools" }
 
